# evaluation_task

./: CMakeLists.txt  README.md  README.rst  app.overlay  prj.conf
src/: main.cpp
src/hal/: hal.cpp  hal.hpp
src/middleware/: middleware.cpp  middleware.hpp
test/: CMakeLists.txt  app_test.cpp
test/test_doubles/hal/: hal_mock.cpp
